# Portfolio_CodeReviewCrew

./: .audit_requirements.txt  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  code_review_report.json  main.py  pyproject.toml  sample_output.json
src/: config.py  crew.py  models.py
src/agents/: __init__.py  documentation_reviewer.py  performance_reviewer.py  quality_analyst.py  security_auditor.py
src/tasks/: __init__.py  review_tasks.py
src/tests/: test_crew.py  test_models.py  test_tools.py
src/tools/: __init__.py  ast_analyser.py  dependency_checker.py  file_reader.py  repo_loader.py
src/ui/: interface.py
